2002-05-31  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* src/log-common.c (format_syslog_header): 
	format the syslog timestamp. 

	We use strptime() in order to do that, combined with localtime()
	to get missing information, and mktime() to convert back to a
	timeval.

2002-05-31  Krzysztof Zaraska  <kzaraska@student.uci.agh.edu.pl>

	* plugins/simple/ruleset/ipfw.rules: updated to use new SimpleMod
	capabilities.

2002-05-30  Laurent Oudot  <oudot.laurent@wanadoo.fr>

	* plugins/simple/simple.c
	remove a debuging printf() in the changelog (suggested by yoann)

2002-05-30  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* src/lml-alert.c (lml_emit_alert):
	include string.h for strlen()... Thanks to 
	Razvan Cosma (razvan.cosma@catv.telemach.ro) for pointing this out.
	
	* plugins/pax/pax.c (pax_log_processing): 
	* plugins/debug/debug.c (debug_run): 
	* src/lml-alert.c (lml_emit_alert): 

	use idmef_additional_data_set_data().

2002-05-30  Laurent Oudot  <oudot.laurent@wanadoo.fr>

        * plugins/simple/ruleset/netfilter.rules:
        upgrade of the rules owing to the new simple.c possibilities

2002-05-30  Laurent Oudot  <oudot.laurent@wanadoo.fr>

        * plugins/simple/ruleset/zyxel.rules:
        upgrade of the rules owing to the new simple.c possibilities

2002-05-27  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* src/file-server.c (try_reopening_inactive_fd): 
	remove unused variable.

2002-05-27  Yoann Vandoorselaere  <yoann@mandrakesoft.com>
	
	Patch from Arnaud Guignard <arnaud.guignard@free.fr> :
	
	* plugins/simple/simple.c: added patch to handle
	IDMEF source node category, source node location,
	source node name, source spoofed, source interface,
	source service port, source service protocol,
	source service name, source service portlist,
	target node address, target node category, target
	node location, target node name, target decoy,
	target interface, target service port, target
	service protocol, target service name, target