@@ -3,6 +3,10 @@
 	* src/log-common.c (format_syslog_header): 
 	format the syslog timestamp. 
 
+	(format_syslog_header): 
+	don't show parsing error... We parse file that don't have the
+	syslog format...
+
 	We use strptime() in order to do that, combined with localtime()
 	to get missing information, and mktime() to convert back to a
 	timeval.
